--- a/css/seanandmia.css
+++ b/css/seanandmia.css
@@ -2,7 +2,6 @@
 ______________________________________________*/
 
 body, html {
-    height: 100%;
     margin: 0;
 	font-family: 'Open Sans Condensed', sans-serif;
 	font-style: normal;
@@ -11,19 +10,19 @@ body, html {
     color: #000000;
 
     /* Safari 4-5, Chrome 1-9 */
-    background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#ffffff), to(#ffebeb));
+    background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#ffffff), to(#7e7775));
 
     /* Safari 5.1, Chrome 10+ */
-    background: -webkit-linear-gradient(top, #ffffff, #ffebeb);
+    background: -webkit-linear-gradient(top, #ffffff, #7e7775);
 
     /* Firefox 3.6+ */
-    background: -moz-linear-gradient(top, #ffffff, #ffebeb);
+    background: -moz-linear-gradient(top, #ffffff, #7e7775);
 
     /* IE 10 */
-    background: -ms-linear-gradient(top, #ffffff, #ffebeb);
+    background: -ms-linear-gradient(top, #ffffff, #7e7775);
 
     /* Opera 11.10+ */
-    background: -o-linear-gradient(top, #ffffff, #ffebeb);
+    background: -o-linear-gradient(top, #ffffff, #7e7775);
 }
 h1 {
     font-family: 'Josefin Sans', sans-serif;
@@ -70,7 +69,7 @@ p, ul {
 	line-height: 18px;
 }
 a {
-    color: #777777;
+    color: #b7b7b7;
     text-decoration: none;
 	font-size: 14px;
 	font-style: normal;
@@ -80,13 +79,14 @@ a {
 	line-height: 20px;
 }
 a:hover {
-    color: #b7b7b7;
+    color: #ffffff;
     font-size: 14px;
     font-style: normal;
     font-variant: normal;
     font-weight: 300;
     letter-spacing: 1.5px;
     line-height: 20px;
+    text-decoration: none;
 }
 .white {
   color: #ffffff;
@@ -108,9 +108,10 @@ a:hover {
 /* IMAGE, BUTTON & SPACING CUSTOMIZATIONS 
 ______________________________________________*/
 
-
 .logo {
-  padding-top: 350px;
+  padding-top: 150px;
+  width: 261px;
+  padding-bottom: 150px;
 }
 .top1xspace {
   padding-top: 100px;
@@ -137,11 +138,8 @@ ______________________________________________*/
   background-size: cover;
 }
 .bgimg-1 {
-  background-image: url("../img/morganite.jpg");
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: auto;
-  min-height: 600px;
+  background-image: url("../img/invitation_transparent.png");
+  min-height: 100%;
 }
 .bgblack {
   background-color: #000000;
