--- a/css/seanandmia.css
+++ b/css/seanandmia.css
@@ -138,7 +138,7 @@ ______________________________________________*/
   background-size: cover;
 }
 .bgimg-1 {
-  background-image: url("../img/invitation_transparent.png");
+  background-image: url("../img/tiffanychampagne.JPG");
   min-height: 100%;
 }
 .bgblack {
